fix(infotext): remove redundant icon margin-end, gap already handles spacing

--- a/packages/components/src/components/infotext/infotext.scss
+++ b/packages/components/src/components/infotext/infotext.scss
@@ -6,9 +6,7 @@
 @use "@db-ux/core-foundations/build/styles/icons";
 
 .db-infotext {
-	--db-icon-margin-end: calc(
-		#{variables.$db-spacing-fixed-2xs} - calc(1ch / 2)
-	);
+	--db-icon-margin-end: 0;
 
 	@extend %db-overwrite-font-size-sm;
 	@include helpers.display(flex);
